# test-build-ios

./: .gitignore  .gitmodules  Cargo.toml  pubspec.yaml
.github/workflows/: build-android.yml  build-ios.yml  build-linux.yml  build-macos.yml  build-windows.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/me/hanh/ywallet/android/: MainActivity.kt
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: accounts.g.dart  main.dart  main.reflectable.dart  store2.g.dart
lib/src/: version.dart
linux/: AppImageBuilder.yml  CMakeLists.txt  Dockerfile-flatpak  me.hanh.zwallet.Ywallet.yml
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
warp_api/: README.md  pubspec.yaml
warp_api/android/: build.gradle
warp_api/android/src/main/kotlin/me/hanh/ywallet/android/: WarpApiPlugin.kt
warp_api/android/src/test/kotlin/com/example/warp_api/: WarpApiPluginTest.kt
warp_api/ios/: warp_api.podspec
warp_api/ios/Classes/: WarpApiPlugin.swift
warp_api/lib/: warp_api.dart  warp_api_generated.dart  warp_api_method_channel.dart  warp_api_platform_interface.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
