[workspace]
resolver = "2"
members = ["zcash-sync"]

[profile.release]
lto = true
codegen-units = 1
debug = false

[patch.crates-io]
zcash_note_encryption = { git = "https://github.com/hhanh00/librustzcash.git", rev = "e2fe0b8d386fad99e00d6135c5caf3cc04045646" }    

# Android 32-bit fix
halo2_gadgets  = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }
halo2_proofs = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }
orchard = { git = "https://github.com/zcash/orchard.git", rev = "fa4ec31bd17b7b54e7474f270e8b5a4ae1a0de5c" }
